hamburger comment hamburger menu not added

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* I did not add the hamburger menu bar becaause we were not instructed to do so for the mobile responsiveness */
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap");
 
 * {
