--- a/styles.css
+++ b/styles.css
@@ -360,7 +360,7 @@ div.footer h6 {
   ul {
     height: 40px;
     width: 40px;
-    background: url("bars-solid.svg");
+    background: url("icons8-menu-26.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
