--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
-/* I did not add the hamburger menu bar becaause we were not instructed to do so for the mobile responsiveness */
-/* Hamburger icon from fontawesome.com - https://fontawesome.com/license */
+/* I did not add the hamburger icon to the html becaause we were not instructed to touch the HTML file*/
+
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap");
 
 * {
@@ -8,9 +8,6 @@
   box-sizing: border-box;
   font-family: "Rubik", sans-serif;
 }
-/* body {
-  overflow-x: hidden;
-} */
 div.nav-bar {
   display: flex;
   justify-content: space-between;
